--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,180 @@
-/*# sourceMappingURL=style.css.map */
+@charset "UTF-8";
+/*Variabler*/
+/*Mixins*/
+/*Generel styling*/
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  font-family: "Share", sans-serif;
+  font-size: 22px;
+}
+
+h1, h2, h3 {
+  font-family: "Share Tech Mono", monospace;
+}
+
+h1 {
+  font-size: 40px;
+  text-align: left;
+}
+
+h2 {
+  font-size: 40px;
+}
+
+h3 {
+  font-size: 28px;
+}
+
+html {
+  height: 100%;
+  width: 100%;
+  height: 100vh;
+}
+
+body {
+  background-size: contain;
+  background-position: top;
+  background-repeat: no-repeat;
+  background-color: #222425;
+  text-align: center;
+}
+
+footer {
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  background-color: #222425;
+}
+footer ul {
+  display: flex;
+  justify-content: center;
+  list-style: none;
+}
+footer li.active {
+  color: red;
+}
+footer a {
+  font-size: 126px;
+  text-decoration: none;
+  color: burlywood;
+}
+footer a.active {
+  color: red;
+}
+
+.btn {
+  background-color: #23742F;
+  padding: 10px 15px;
+  border-radius: 15px;
+  width: auto;
+  text-decoration: none;
+  font-family: "Share", sans-serif;
+  color: #F0F0F0;
+  font-size: 20px;
+  margin-top: 50px;
+  display: inline-block;
+}
+.btn:hover {
+  background-color: #35AE48;
+  color: black;
+  border: 2px solid black;
+  cursor: pointer;
+  transition-duration: 0.7s;
+}
+
+/* forsiden */
+.hero-section {
+  background-image: url(../img/hero.png);
+  background-position: top;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+.hero-section .contain {
+  padding-top: 300px;
+  padding-bottom: 100px;
+  text-align: left;
+  padding-left: 10%;
+}
+.hero-section .contain .titel {
+  position: relative;
+  color: black;
+  font-size: 75px;
+  font-family: "Share Tech Mono", monospace;
+}
+.hero-section .contain .titel.første-titel {
+  color: #F0F0F0;
+}
+
+/*intro side*/
+.txt-section img {
+  width: 40%;
+  float: right;
+}
+.txt-section h1, .txt-section p {
+  color: #F0F0F0;
+}
+.txt-section h1 {
+  text-align: center;
+  margin-top: 2rem;
+}
+.txt-section p {
+  text-align: left;
+  margin: 20px 100px;
+}
+.txt-section .gap {
+  margin-left: 50px;
+}
+
+/*informationsside - fold ud box*/
+.box-section {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 100px;
+  margin-top: 50px;
+}
+.box-section .box {
+  width: 300px;
+  height: 300px;
+  background-color: #35AE48;
+  padding: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  cursor: pointer;
+}
+.box-section .box p {
+  font-size: 22px;
+}
+.box-section .box .indhold {
+  max-height: 0;
+  overflow: hidden;
+  transition: max-height 0.4s ease-out;
+  padding: 0 1em;
+}
+.box-section .box .indhold .p {
+  padding: 1em 0;
+  margin: 0;
+}
+.box-section .box .indhold::after {
+  height: auto;
+}
+.box-section .box h2 {
+  font-size: 26px;
+  position: relative;
+}
+.box-section .box h2::before {
+  content: "+";
+  font-size: 50px;
+  position: absolute;
+  bottom: -140px;
+  right: 45%;
+}
+.box-section .box:active h2::before {
+  content: "-";
+}/*# sourceMappingURL=style.css.map */
