--- a/css/style.css
+++ b/css/style.css
@@ -177,4 +177,39 @@ footer a.active {
 }
 .box-section .box:active h2::before {
   content: "-";
+}
+
+/*senarie*/
+.senarie .container {
+  display: flex;
+  flex-direction: column;
+  padding: 20px 100px 0 100px;
+  align-items: center;
+}
+.senarie .container #text {
+  width: 75%;
+}
+.senarie .container #option-buttons {
+  display: flex;
+  flex-direction: column;
+  width: 60%;
+  gap: 50px;
+  margin-top: 30px;
+  padding: 10px;
+}
+.senarie .container #option-buttons button {
+  background-color: rgb(59, 156, 72);
+  padding: 20px;
+  text-decoration: none;
+  border: none;
+  cursor: pointer;
+}
+
+/*afslutning*/
+.end-section {
+  margin-top: 200px;
+}
+.end-section .safety {
+  height: 200px;
+  padding-bottom: 25px;
 }/*# sourceMappingURL=style.css.map */
