--- a/css/style.scss
+++ b/css/style.scss
@@ -33,10 +33,7 @@ html{
 }
 
 body{
-  background-size: contain;
-  background-position: top;
-  background-repeat: no-repeat;
-  background-color: partial.$bg-color;
+    background-color: partial.$bg-color;  
 
   text-align: center;
 }
@@ -53,17 +50,13 @@ footer{
       list-style: none;
     }
   
-    li.active{
-      color: red;
-    }
-  
     a{
       font-size: 126px;
       text-decoration: none;
-      color: burlywood;
+      color: rgb(189, 189, 189);
   
         &.active{
-          color: red;
+          color: rgb(8, 8, 8);
         }
     }
   }
@@ -83,12 +76,13 @@ footer{
     background-position: top;
     background-repeat: no-repeat;
     background-size: cover;
+    height: 90vh;
 
     .contain{
         padding-top: 300px;
         padding-bottom: 100px;
         text-align: left;
-        padding-left: 10%;
+        padding-left: 20%;
     }
 
     .contain .titel{
@@ -133,63 +127,83 @@ footer{
 }
 
 /*informationsside - fold ud box*/
+.bg-info{
+    
+    background-image: url(../img/hacker.png);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: contain;
+    
+}
+
 .box-section{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    gap: 100px;
-    margin-top: 50px;
+    display: grid;
+    grid-template-columns: 10% 1fr 5% 1fr 10%;
+    grid-template-rows: auto;
+    margin-top: 150px;
+    row-gap: 40px;
+    
 
     .box{
-        width: 300px;
-        height: 300px;
         background-color: partial.$primary-color;
-        padding: 20px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        text-align: center;
-        display: flex;
-        flex-direction: column;
+        opacity: 90%;
+        width: 450px;
+        height: 100px;
+        border-radius: 2px;
+        text-align: left;
         cursor: pointer;
+        grid-column: 4/5;
         
-        p{
-            font-size: 22px;
-        }
+        
+        display: grid;
+        grid-template-columns: 5% 10% 80% 5%;
+        align-items: center;
+        
+        img{
+            width: 13px;
+            grid-column: 2/3;
 
-        .indhold{
-            max-height: 0;
-            overflow: hidden;
-            transition: max-height 0.4s ease-out;
-            padding:  0 1em;
-
-            .p{
-                padding: 1em 0;
-                margin: 0;
-            }
-
-            &::after{
-                height: auto;
+            &:hover{
+                transform: scale(1.5);
             }
         }
 
         h2{
-            font-size: 26px;
-            position: relative;
+            font-size: 24px;
+            grid-column: 3/4;
+        }
+    }
 
-            &::before{
-                content: "+";
-                font-size: 50px;
-                position: absolute;
-                bottom: -140px;
-                right: 45%;
-            }
+.læring{
+            display: none;
         }
 
-        &:active h2::before{
-            content: "-";
-        }
+    .indhold{
+        opacity: 90%;
+        width: 450px;
+        height: 520px;
+        background-color: rgb(122, 122, 122);
+        grid-column: 2/3;
+        grid-row: 1/5;
+        padding: 20px;
 
+        p{
+            padding-top: 10px;
+        }
+    }
+
+    .box:nth-child(2) {
+        grid-column: 4/5; 
+        grid-row: 2/3; 
+    }
+
+    .box:nth-child(3) {
+        grid-column: 4/5; 
+        grid-row: 3/4;
+    }
+
+    .box:nth-child(4) {
+        grid-column: 4/5; 
     }
 }
 
