styling af resten

--- a/css/_partial.scss
+++ b/css/_partial.scss
@@ -2,7 +2,7 @@
 $bg-color: #222425;
 $primary-color: #35AE48;
 $secondary-color: #23742F;
-$text-color: #F0F0F0;
+$text-color: #dbdbdb;
 $bg-box: rgb(170, 170, 170);
 $aw-color: #3e79a0;
 $font: "Share", sans-serif;;
