--- a/css/_partial.scss
+++ b/css/_partial.scss
@@ -1,5 +1,5 @@
 /*Variabler*/
-$bg-color: #222425;
+$bg-color: #3e4142;
 $primary-color: #35AE48;
 $secondary-color: #23742F;
 $text-color: #dbdbdb;
