--- a/css/style.css
+++ b/css/style.css
@@ -34,7 +34,7 @@ html {
 }
 
 body {
-  background-color: #222425;
+  background-color: #3e4142;
   text-align: center;
 }
 
@@ -42,7 +42,7 @@ footer {
   position: fixed;
   bottom: 0;
   width: 100%;
-  background-color: #222425;
+  background-color: #3e4142;
 }
 footer ul {
   display: flex;
