--- a/css/style.scss
+++ b/css/style.scss
@@ -26,6 +26,17 @@ h3{
     font-size: 28px;
 }
 
+@media (max-width: 800px) { 
+    h1, h2{
+        font-size: 32px;
+    }
+    
+    h3{
+        font-size: 24px;
+    }
+
+}
+
 html{
     height: 100%;
   width: 100%;
@@ -59,6 +70,12 @@ footer{
           color: rgb(8, 8, 8);
         }
     }
+
+    @media (max-width: 1250px){
+        a{
+            font-size: 100px;
+        }
+    }
   }
 
   .btn{
@@ -68,7 +85,7 @@ footer{
             @include partial.btn-hover;
             transition-duration: 0.7s;
         }
-}
+    }
 
 /* forsiden */
 .hero-section{
@@ -90,6 +107,10 @@ footer{
         color: black;
         font-size: 75px;
         font-family: partial.$header-font;
+
+        @media (max-width: 1000px) {
+             font-size: 50px;
+        }
     }
 
     .contain .titel.første-titel{
@@ -101,7 +122,6 @@ footer{
 /*intro side*/
 .txt-section{
     margin: 0 100px;
-    height: auto;
 
     img{
         width: 40%;
@@ -136,11 +156,17 @@ footer{
         color: black;
     }
 
+    @media (max-width: 800px) {
+        p{
+            font-size: 18px;
+        }
+        
+        margin: 0 50px;
+    }
 }
 
 /*informationsside - fold ud box*/
-.bg-info{
-    
+.bg-info{       
     background-image: url(../img/hacker.png);
     background-repeat: no-repeat;
     background-position: center;
@@ -150,11 +176,10 @@ footer{
 
 .box-section{
     display: grid;
-    grid-template-columns: 10% 1fr 5% 1fr 10%;
+    grid-template-columns: 1fr 1fr;
     grid-template-rows: auto;
     margin-top: 150px;
     row-gap: 40px;
-    
 
     .box{
         background-color: partial.$primary-color;
@@ -164,8 +189,9 @@ footer{
         border-radius: 2px;
         text-align: left;
         cursor: pointer;
-        grid-column: 4/5;
-        
+        grid-column: 2/3;
+        margin-left: auto;
+        margin-right: auto;
         
         display: grid;
         grid-template-columns: 5% 10% 80% 5%;
@@ -195,30 +221,37 @@ footer{
         width: 450px;
         height: 520px;
         background-color: rgb(122, 122, 122);
-        grid-column: 2/3;
+        grid-column: 1/2;
         grid-row: 1/5;
         padding: 20px;
 
         p{
             padding-top: 10px;
             text-align: left;
+
+        }
+
+        h2{
+            font-size: 28px;
         }
     }
 
     .box:nth-child(2) {
-        grid-column: 4/5; 
+        grid-column: 2/3; 
         grid-row: 2/3; 
     }
 
     .box:nth-child(3) {
-        grid-column: 4/5; 
+        grid-column: 2/3; 
         grid-row: 3/4;
     }
 
     .box:nth-child(4) {
-        grid-column: 4/5; 
+        grid-column: 2/3; 
     }
 }
+
+
 
 /*senarie*/
 .senarie{
@@ -269,7 +302,13 @@ height: 90vh;
     }
 }
 .end-section{
-    margin-top: 200px;
+    margin: 200px 100px;
+
+    h4{
+        font-family: partial.$header-font;
+        margin-top: 30px;
+    }
+
     .safety{
         height: 200px;
         padding-bottom: 25px;
