--- a/css/style.scss
+++ b/css/style.scss
@@ -39,13 +39,13 @@ h3{
 
 html{
     height: 100%;
-  width: 100%;
-  height: 100vh;
+    width: 100%;
+    height: 100vh;
+    overflow: auto;
 }
 
 body{
     background-color: partial.$bg-color;  
-
   text-align: center;
 }
 
@@ -76,6 +76,10 @@ footer{
             font-size: 100px;
         }
     }
+    @media (max-width: 1000px){
+        position: sticky;
+        background-color: transparent;
+    }
   }
 
   .btn{
@@ -85,15 +89,19 @@ footer{
             @include partial.btn-hover;
             transition-duration: 0.7s;
         }
+    
+        @media (max-width: 800px){
+            font-size: 16px;
+        }
     }
 
-/* forsiden */
+
+/********************* forsiden *********************/
 .hero-section{
     background-image: url(../img/hero.png);
     background-position: top;
     background-repeat: no-repeat;
     background-size: cover;
-    height: 90vh;
 
     .contain{
         padding-top: 300px;
@@ -111,6 +119,10 @@ footer{
         @media (max-width: 1000px) {
              font-size: 50px;
         }
+
+        @media (max-width: 500px){
+            font-size: 36px;
+        }
     }
 
     .contain .titel.første-titel{
@@ -119,7 +131,7 @@ footer{
 
 }
 
-/*intro side*/
+/**************intro side*************/
 .txt-section{
     margin: 0 100px;
 
@@ -157,21 +169,38 @@ footer{
     }
 
     @media (max-width: 800px) {
+        h1{
+            font-size: 26px;
+        }
         p{
-            font-size: 18px;
+            font-size: 16px;
+        }
+
+        img{
+            float: none;
+            width: 100%;
         }
         
         margin: 0 50px;
     }
+
+    @media (max-width: 500px){
+        .gap{
+            margin-left: 15px;
+        }
+    }
 }
 
-/*informationsside - fold ud box*/
+/***************informationsside - fold ud box*********************/
 .bg-info{       
     background-image: url(../img/hacker.png);
     background-repeat: no-repeat;
     background-position: center;
     background-size: contain;
     
+    @media (max-width: 500px){
+        background-image: none;
+    }
 }
 
 .box-section{
@@ -212,7 +241,7 @@ footer{
         }
     }
 
-.læring{
+    .læring{
             display: none;
         }
 
@@ -224,6 +253,8 @@ footer{
         grid-column: 1/2;
         grid-row: 1/5;
         padding: 20px;
+        margin-left: auto;
+        margin-right: auto;
 
         p{
             padding-top: 10px;
@@ -249,14 +280,55 @@ footer{
     .box:nth-child(4) {
         grid-column: 2/3; 
     }
+
+    @media (max-width: 1000px) {
+        margin-top: 20px;
+        display: flex;
+        flex-direction: column-reverse;
+
+        img{
+            rotate: -90deg;
+        }
+    }
+    @media (max-width: 500px) {
+        margin-top: 0;
+        display: block;
+        max-height: auto;
+        color: partial.$text-color;
+
+        .box{
+            width: 100%;
+            height: 100px;
+            border-radius: 0px;
+            cursor: none;
+            color: black;
+
+            h2{font-size: 20px;}
+        }
+
+        .læring{
+            display: contents;
+            text-align: left;
+            font-family: partial.$font;
+            
+            p{
+                margin: 20px 20px;
+                font-size: 16px;
+            }
+        }
+
+        .indhold{
+            display: none;
+        }
+
+    }
+    
 }
 
 
 
-/*senarie*/
+/**************senarie*************/
 .senarie{
-height: 90vh;
-
     h1{
         text-align: center;
         padding-top: 40px;
@@ -290,10 +362,80 @@ height: 90vh;
             cursor: pointer;
           }
       }
+
+  }
+
+  @media (max-width: 1000px){
+    h1{
+        font-size: 32px;
+        padding-top: 20px;
+    }
+
+    .container{
+        padding: 10px 50px 50px 50px;
+
+        #text{
+            width: 85%;
+            font-size: 18px;
+        }
+
+        #option-buttons{
+            width: 90%;
+            margin-top: 10px;
+            font-size: 18px;
+        }
+
+        button{
+            padding: 10px;
+        }
+    }
+
+  }
+
+  @media (max-width: 650px){
+
+    .container{
+        padding: 10px 20px 50px 20px;
+
+        #text{
+            width: 85%;
+            font-size: 18px;
+        }
+
+        #option-buttons{
+            width: 90%;
+            margin-top: 10px;
+            font-size: 18px;
+        }
+    }
+  }
+
+  @media (max-width: 500px){
+    h1{
+        font-size: 22px;
+    }
+
+    .container{
+        padding: 10px 10px 0 10px;
+
+        #text{
+            width: 95%;
+            font-size: 16px;
+        }
+
+        #option-buttons{
+            font-size: 16px;
+            margin-top: 20px;
+
+            button{
+                padding: 5px;
+            }
+        }
+    }
   }
 }
 
-/*afslutning*/
+/*********************afslutning******************/
 .slutning{
     background-color:  partial.$secondary-color;
 
@@ -302,7 +444,7 @@ height: 90vh;
     }
 }
 .end-section{
-    margin: 200px 100px;
+    margin: 100px 100px;
 
     h4{
         font-family: partial.$header-font;
@@ -312,5 +454,12 @@ height: 90vh;
     .safety{
         height: 200px;
         padding-bottom: 25px;
+    }
+
+    @media (max-width: 1000px){
+        margin: 50px 50px;
+    }
+    @media (max-width: 500px){
+        margin: 20px 20px;
     }
 }
