--- a/css/style.css
+++ b/css/style.css
@@ -53,6 +53,23 @@ footer {
   width: 100%;
   background-color: #3e4142;
 }
+footer img {
+  width: 40px;
+  cursor: pointer;
+  float: left;
+  border: 1px black solid;
+  padding: 3px;
+}
+footer img:hover {
+  background-color: rgb(228, 192, 77);
+}
+footer #bank {
+  border-radius: 10px 0 0 10px;
+  margin-left: 20px;
+}
+footer #dao {
+  border-radius: 0 10px 10px 0;
+}
 footer ul {
   display: flex;
   justify-content: center;
