--- a/css/style.css
+++ b/css/style.css
@@ -51,7 +51,7 @@ footer {
   position: fixed;
   bottom: 0;
   width: 100%;
-  background-color: #3e4142;
+  background-color: transparent;
 }
 footer img {
   width: 40px;
@@ -60,15 +60,20 @@ footer img {
   border: 1px black solid;
   padding: 3px;
 }
-footer img:hover {
-  background-color: rgb(228, 192, 77);
-}
 footer #bank {
   border-radius: 10px 0 0 10px;
   margin-left: 20px;
+  background-color: rgb(72, 135, 218);
+}
+footer #bank:hover {
+  background-color: rgb(228, 192, 77);
 }
 footer #dao {
   border-radius: 0 10px 10px 0;
+  background-color: rgb(72, 135, 218);
+}
+footer #dao:hover {
+  background-color: rgb(228, 192, 77);
 }
 footer ul {
   display: flex;
@@ -128,8 +133,8 @@ footer a.active {
   background-size: cover;
 }
 .hero-section .contain {
-  padding-top: 300px;
-  padding-bottom: 100px;
+  padding-top: 200px;
+  padding-bottom: 70px;
   text-align: left;
   padding-left: 20%;
 }
@@ -151,6 +156,9 @@ footer a.active {
 }
 .hero-section .contain .titel.første-titel {
   color: #dbdbdb;
+}
+.hero-section a {
+  margin-bottom: 100px;
 }
 
 /**************intro side*************/
@@ -182,6 +190,9 @@ footer a.active {
 .txt-section .fed {
   font-weight: 800;
   color: black;
+}
+.txt-section a {
+  margin-bottom: 100px;
 }
 @media (max-width: 800px) {
   .txt-section {
@@ -221,7 +232,8 @@ footer a.active {
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-template-rows: auto;
-  margin-top: 150px;
+  margin-top: 50px;
+  margin-bottom: 100px;
   row-gap: 40px;
 }
 .box-section .box {
@@ -334,16 +346,21 @@ footer a.active {
   flex-direction: column;
   padding: 20px 100px 0 100px;
   align-items: center;
+  margin-bottom: 100px;
 }
 .senarie .container #text {
   width: 75%;
-  color: #dbdbdb;
+  color: black;
+  background-color: rgba(165, 165, 165, 0.7);
+  border-radius: 15px;
+  padding: 5px;
 }
 .senarie .container #option-buttons {
   display: flex;
   flex-direction: column;
   width: 60%;
   margin-top: 30px;
+  margin-bottom: 100px;
   padding: 10px;
   opacity: 90%;
 }
